5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1649_1053.log
== TEST (2019-04-11 18:51:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if animal="cervo"
	print("cervo eh patrono do Harry Potter")
else:
	print(animal "nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if animal="cervo"
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:54:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if animal=cervo
	print("cervo eh patrono do Harry Potter")
else:
	print(animal "nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if animal=cervo
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:54:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if (animal=cervo)
	print("cervo eh patrono do Harry Potter")
else:
	print(animal "nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if (animal=cervo)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:55:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if (animal!=cervo)
	print("nao eh patrono do Harry Potter")
else:
	print(animal "cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if (animal!=cervo)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:58:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if (animal!=cervo)
	print(animal + "nao eh patrono do Harry Potter")
else:
	print(animal + "eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if (animal!=cervo)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:58:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if (animal!=cervo):
	print(animal + "nao eh patrono do Harry Potter")
else:
	print(animal + "eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (animal!=cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:59:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if (animal!="cervo"):
	print(animal + "nao eh patrono do Harry Potter")
else:
	print(animal + "eh patrono do Harry Potter")
-- OUTPUT:
cervoeh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:59:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if (animal!="cervo"):
	print(animal + " nao eh patrono do Harry Potter")
else:
	print(animal + " eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:59:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal=input("patrono: ")
if (animal!="cervo"):
	print(animal + " nao eh patrono do Harry Potter")
else:
	print(animal + " eh patrono do Harry Potter")
-- EXECUTION TIME:
0.161744
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
